# slowdown_arctic_seaice

./: .gitignore  PROJECT_STRUCTURE.md  README.md  README_MODULAR.md  SETUP_GUIDE.md  environment-ml.yml  environment.yml  pyproject.toml  requirements-ml.txt  requirements.txt  setup.py
configs/: __init__.py  model.py  paths.py  training.py
data_download/: D0.0_aice_download_1990-2100  D0.3_aice_monthly.py  D0_README
data_processing/: D0_OBS_SST_ersstv5_regrid.py  D1_CESM2_nino3.4_index.py  D1_OBS_SST_regridded_ENSO_index.py  D1_OBS_SST_regridded_IPO_index.py  D2_TVT_CESM2_sst_sie_seasonal_global.py
docs/: setup.md  workflow.md
figures/: F1_FS1_FS2_siextent_slowdown.py  F1_FS1_FS2_slowdowns.ipynb  F2-3_FS8-S9_composite_pdf.ipynb  F2-3_cnn_lrpz_seasonal_ipo_indexing_global.py  F4_predict_obs.ipynb  FS10_sie_gmt.ipynb  FS3-7_model_performance.ipynb  FSX_EI_cnn_performance_seasonal_global.py  FSX_siextent_slowdown.py  FSX_siextent_slowdown_lots.py
notebooks/: cesm2le_climate_indices_enso_cptp.ipynb  cesm2le_climate_indices_ipo.ipynb  cesm2le_climate_indices_nino34.ipynb  cesm2le_download_testing.ipynb  cesm2le_nsidc_slowdowns.ipynb  cesm2le_tvt_splits_testing.ipynb  cnn_predict.ipynb  cnn_predict_indices.ipynb  cnn_predict_obs.ipynb  cnn_predict_pdfs.ipynb  cnn_train.ipynb  ersst_climate_indices.ipynb  ersst_regrid_testing.ipynb  xai_kmeans.ipynb  xai_lrp.ipynb
scripts/: 01_cesm2le_grid.py  01_cesm2le_landmask.py  01_cesm2le_preprocessing.py  01_download_data.py  01_ersst_preprocessing.py  01_slowdown_nsidc_sie_sia.py  02_cesm2le_climate_indices.py  (+17 more)
(+77 files in other folders)
