[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slowdown-arctic-seaice"
version = "0.1.0"
description = "Modular package for analyzing Arctic sea ice trends and climate indices"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Lauren Hoffman", email = "lhoffma2@ucsc.edu"}
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "netCDF4>=1.5.7",
    "matplotlib>=3.4.0",
    "cartopy>=0.20.0",
    "cmocean>=2.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "jupyter>=1.0",
    "ipython>=7.0",
]

# Package discovery is handled by setup.py (custom slowdown → src/ mapping).
